<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:scrollbars="vertical"
    tools:context=".activity.AccountSettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvAccountSettingsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Account Setting"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"/>
        <ImageView
            android:id="@+id/avtImg"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/avatar"
            android:textAlignment="gravity"
            android:layout_gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:background="#C7C8CC">
            <Button
                android:id="@+id/btnChangeName"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="New Name"
                android:textSize="24dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAlignment="gravity"
                android:gravity="center_vertical"
                android:background="#000000000"
                android:padding="10dp"/>
            <ImageButton
                android:id="@+id/btnDropName"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/baseline_arrow_drop_down_24"
                android:background="#00000000"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:id="@+id/newName">
            <EditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:textColorHint="@color/black"
                android:textSize="20dp"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:background="@drawable/button_background"/>
            <Button
                android:id="@+id/btnUpdateName"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_background"
                android:text="UPDATE"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:background="#C7C8CC">
            <Button
                android:id="@+id/btnChangeEmail"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="New Email"
                android:textSize="24dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAlignment="gravity"
                android:gravity="center_vertical"
                android:background="#00000000"
                android:padding="10dp"/>
            <ImageButton
                android:id="@+id/btnDropEmail"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/baseline_arrow_drop_down_24"
                android:background="#00000000"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:id="@+id/newEmail">
            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="@color/black"
                android:textSize="20dp"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:background="@drawable/button_background"/>
            <Button
                android:id="@+id/btnUpdateEmail"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_background"
                android:text="UPDATE"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:background="#C7C8CC">
            <Button
                android:id="@+id/btnChangePass"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="New Password"
                android:textSize="24dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAlignment="gravity"
                android:gravity="center_vertical"
                android:background="#00000000"
                android:padding="10dp"/>
            <ImageButton
                android:id="@+id/btnDropPass"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/baseline_arrow_drop_down_24"
                android:background="#00000000"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:id="@+id/newPass">
            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/black"
                android:textSize="20dp"
                android:inputType="textPassword"
                android:padding="12dp"
                android:background="@drawable/button_background"/>
            <Button
                android:id="@+id/btnUpdatePass"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_background"
                android:text="UPDATE"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
